# dpacalc

./: Kconfig  Makefile  example  exampleout  extractkey
DataConverter/doc/html/: FileAttackConfigReader_8h_source.html  FileConfigReader_8h.html  FileConfigReader_8h__dep__incl.map  FileConfigReader_8h__dep__incl.md5  FileConfigReader_8h__incl.map  FileConfigReader_8h__incl.md5  FileConfigReader_8h_source.html  FileReader_8h.html  FileReader_8h__dep__incl.map  FileReader_8h__dep__incl.md5  FileReader_8h__incl.map  FileReader_8h__incl.md5  FileReader_8h_source.html  Utils_8h__dep__incl.map  Utils_8h__dep__incl.md5  Utils_8h__incl.map  Utils_8h__incl.md5  Utils_8h_source.html  agilent_8h_source.html  classFileAttackConfigReader-members.html  classFileAttackConfigReader.html  classFileConfigReader-members.html  classFileConfigReader.html  classFileReader-members.html  classFileReader.html  classUtils-members.html  common_8h__dep__incl.map  common_8h__dep__incl.md5  common_8h__incl.md5  common_8h_source.html  converter_8cpp.html  converter_8cpp__incl.map  converter_8cpp__incl.md5  functions_func.html  globals_func.html  globals_type.html  graph_legend.html  structAgilentFileHeader-members.html  structAgilentFileHeader.html  structAgilentFileHeaderTag-members.html  (+9 more)
DataConverter/doc/html/search/: all_61.html  all_63.html  (+18 more)
DataConverter/doc/latex/: FileConfigReader_8h.tex  FileConfigReader_8h__dep__incl.md5  FileConfigReader_8h__incl.md5  FileReader_8h.tex  FileReader_8h__dep__incl.md5  FileReader_8h__incl.md5  Utils_8h__dep__incl.md5  Utils_8h__incl.md5  classFileAttackConfigReader.tex  classFileConfigReader.tex  classFileReader.tex  common_8h__dep__incl.md5  common_8h__incl.md5  converter_8cpp.tex  converter_8cpp__incl.md5  structAgilentFileHeader.tex  structAgilentFileHeaderTag.tex  structAgilentWaveformDataHeader.tex  structAgilentWaveformDataHeaderTag.tex  structAgilentWaveformHeader.tex  structAgilentWaveformHeaderTag.tex
DataConverter/other/: config_convert_in.txt  plaintexts.txt
DataConverter/other/traces/: Scenario_sample0001__Repetition_1_Ch3_Avg_Sweep_16_X_40673.0_Y_-23854.8.trc  Scenario_sample0002__Repetition_1_Ch3_Avg_Sweep_16_X_40673.0_Y_-23854.8.trc  Scenario_sample0003__Repetition_1_Ch3_Avg_Sweep_16_X_40673.0_Y_-23854.8.trc  Scenario_sample0004__Repetition_1_Ch3_Avg_Sweep_16_X_40673.0_Y_-23854.8.trc  Scenario_sample0005__Repetition_1_Ch3_Avg_Sweep_16_X_40673.0_Y_-23854.8.trc  Scenario_sample0006__Repetition_1_Ch3_Avg_Sweep_16_X_40673.0_Y_-23854.8.trc  Scenario_sample0007__Repetition_1_Ch3_Avg_Sweep_16_X_40673.0_Y_-23854.8.trc  (+1 more)
cmake/: FindBbque.cmake  FindTCLAP.cmake
src/: CMakeLists.txt  config.h.in  dpacalc.h  includes.h.in  main.cpp  main.hpp  utils.cpp  utils.hpp
src/.kdev4/: src.kdev4
src/exec/: base.hpp  bbque.cpp  bbque.hpp  cxx11threads.cpp  cxx11threads.hpp  seq_monocore.cpp  seq_monocore.hpp
src/gen_intermediate/: aes.h  aes128round1.cpp  aes128round1.hpp  aes_constants.h  aes_helpers.h  aes_primitives.h  aes_structs.h  base.hpp  int1.cpp  int1.hpp
src/gen_powermodel/: base.hpp  hammingweight.cpp  hammingweight.hpp  pm1.cpp  pm1.hpp
src/input/: base.hpp  bin1.cpp  bin1.hpp
src/keygen/: aes128keygen.cpp  aes128keygen.hpp  base.hpp  keygen1.cpp  keygen1.hpp
src/output/: base.hpp  coarseresult.cpp  coarseresult.hpp  gnuplot.cpp  gnuplot.hpp  multiple.cpp  multiple.hpp
src/statisticaltest/: base.hpp  bin1.cpp  bin1.hpp  pearson.cpp  pearson.hpp
